Created Home Page, Nav Bar
Created the home page and the nav bar component. Home page features my name, a brief about (the same one on my LinkedIn), and important buttons including contact, github, linkedin, and youtube.

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 @import 'colors.css';
 @import 'dark-mode.css';
+@import 'home.css';
+@import 'navbar.css';
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
