--- a/css/home.css
+++ b/css/home.css
@@ -1,55 +1,50 @@
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
 .home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .name-header {
-    font-size: 108px;
+    font-size: 6.75rem;
     margin: 0;
-    margin-top: 100px;
 }
 
 .name-desc {
-    font-size: 20px;
-    width: 60%;
+    font-size: 1.5rem;
+    width: 55%;
     text-align: center;
 }
 
 .contact-button-container {
-    margin-top: 40px;
+    margin-top: 4rem;
     display: flex;
-    gap: 60px;
+    gap: 3.75rem;
+    margin-bottom: 20rem;
 }
 
 .contact-button {
-  height: 40px;
-  width: 180px;
-  font-size: 20px;
+  height: 2.75rem;
+  width: 13rem;
+  font-size: 1.5rem;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 14px;
+  gap: 0.875rem;
   font-weight: bold;
   border: none;
-  border-radius: 6px;
+  border-radius: 0.375rem;
 }
 
 .github-image {
-    height: 25px;
-    width: 25px;
+    height: 1.563rem;
 }
 
 .linkedin-image {
-    height: 20px;
-    width: 20px;
+    height: 1.5rem;
 }
 
 .yt-image {
-    height: 20px;
+    height: 1.25rem;
 }
