--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,6 @@
 .navbar {
+  padding-left: 2rem;
+  padding-right: 2rem;
   background-color: rgb(60, 60, 60);
   height: 4rem;
   display: flex;
@@ -7,12 +9,12 @@
 }
 
 .nav-links {
+    width: 65%;
     font-weight: bold;
     font-size: 1.125rem;
     list-style: none;
     display: flex;
     gap: 2.5rem;
-    justify-content: center;
     align-items: center;
     padding: 0 !important;
     margin: 0 !important;
@@ -23,17 +25,29 @@
   color: inherit;
 }
 
+#last-link {
+  flex-grow: 1;
+}
+
+.jm-logo {
+  height: 2rem;
+  align-self: center;
+  display: block;
+}
+
+
+
 .dark-mode-container {
   margin-top: auto;
-  margin-bottom: 20px;
+  margin-bottom: 1.4375rem;
   align-self: center;
 }
 
 .dark-mode-switch {
   position: relative;
   display: inline-block;
-  width: 50px;
-  height: 28px;
+  width: 3.59375rem;
+  height: 2.0125rem;
   align-self: center;
 }
 
@@ -54,13 +68,13 @@
 
 .dark-mode-switch .slider img {
   position: absolute;
-  left: 3px;
-  top: 3px;
-  width: 22px;
-  height: 22px;
+  left: 0.21625rem;
+  top: 0.21625rem;
+  width: 1.58125rem;
+  height: 1.58125rem;
   border-radius: 50%;
   background-color: var(--toggle-thumb);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0.071875rem 0.215625rem rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease, background-color 0.3s ease;
   user-select: none;
   -webkit-user-drag: none;
@@ -71,6 +85,6 @@
   display: block;
 }
 
-.dark-mode-switch input:checked + .slider img {
-  transform: translateX(22px);
+.dark-mode-switch input:checked ~ .slider img {
+  transform: translateX(25.3px);
 }
