Added Project Buttons / Logos
Added project buttons / logos, will flesh out the page today.

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 @import 'colors.css';
 @import 'home.css';
 @import 'navbar.css';
+@import 'projects.css';
 
 /* This stylesheet contains everything shared by more than 1 page / component. */
 
