--- a/css/projects.css
+++ b/css/projects.css
@@ -1,14 +1,20 @@
 .project-button {
   height: 2.75rem;
-  width: 16rem;
+  width: auto;
   font-size: 1.5rem;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 0.875rem;
+  gap: 0.75rem;
+  padding: 0rem 1.5rem;
   font-weight: bold;
-  border-color: red;
-  border-width: 2px;
+  border: none;
   border-radius: 0.375rem;
-  background-color: transparent;
+  background-color: var(--default-button);
+  color: var(--standard-text);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.project-image {
+    height: 1.563rem;
 }
