--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+  transition: color 0.2s ease, background-color 0.2s ease;
   background-color: var(--nav-background);
   color: var(--standard-text);
   height: 4rem;
@@ -30,13 +31,18 @@
   display: inline-block;
 }
 
+.nav-link-text:hover {
+  background-color: var(--hover-nav-text);
+}
+
 .nav-links a {
   text-decoration: none;
   color: inherit;
 }
 
 .active-page {
-  background-color: var(--active-nav);
+  transition: background-color 0.2s ease;
+  background-color: var(--active-nav) !important;
 }
 
 .jm-logo {
@@ -87,7 +93,7 @@
   cursor: pointer;
   background-color: var(--toggle-track);
   border-radius: 34px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.2s ease;
 }
 
 .dark-mode-switch .slider img {
