--- a/css/index.css
+++ b/css/index.css
@@ -48,6 +48,7 @@ html, body {
 }
 
 .left-guide-button, .right-guide-button {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   transition: color 0.2s ease, background-color 0.2s ease;
   position: absolute;
   bottom: 2.25rem;
@@ -69,5 +70,7 @@ html, body {
 }
 
 .page-header {
+  margin-top: 3rem !important;
   font-size: 5rem;
+  margin: 0;
 }
