Only 1 Navbar Instance
Rather than having a separate instance of the navbar on each page, there is now only 1 instance. This way, whenever you are switching pages, the navbar doesnt reload.

--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,9 @@
+.home-page {
+  display: flex;
+  flex-direction: column;
+  height: 90vh;
+}
+
 .home-container {
     flex-grow: 1;
     display: flex;
@@ -21,7 +27,7 @@
     margin-top: 4rem;
     display: flex;
     gap: 3.75rem;
-    margin-bottom: 20rem;
+    margin-bottom: 12rem;
     flex-wrap: wrap;
 }
 
