--- a/css/home.css
+++ b/css/home.css
@@ -13,18 +13,18 @@
 }
 
 .name-header {
-    font-size: 6.75rem;
+    font-size: 5.5rem;
     margin: 0;
 }
 
 .name-desc {
-    font-size: 1.5rem;
-    width: 70%;
+    font-size: 1.25rem;
+    width: 75%;
     text-align: center;
 }
 
 .contact-button-container {
-    margin-top: 4rem;
+    margin-top: 3rem;
     display: flex;
     gap: 3.75rem;
     margin-bottom: 12rem;
@@ -37,9 +37,10 @@
   position: relative;
   background-color: var(--default-button);
   color: var(--standard-text);
-  height: 2.75rem;
-  padding: 1rem 1.5rem;
-  font-size: 1.5rem;
+  height: 2.25rem;
+  padding: 0.75rem 1rem;
+  font-size: 1.25rem;
+  gap: 0.75rem;
   font-weight: 600;
   display: inline-flex;
   align-items: center;
