--- a/css/projects.css
+++ b/css/projects.css
@@ -1,11 +1,11 @@
 .project-image {
-  height: 6rem;
-  margin-bottom: 1rem;
+  height: 5.5rem;
+  margin-bottom: .75rem;
 }
 
 .projects-desc {
   transition: color 0.2s ease, background-color 0.2s ease;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   font-weight: bold;
   font-style: italic;
   margin: 0;
@@ -16,11 +16,11 @@
   transition: color 0.2s ease, background-color 0.2s ease;
   padding: 0;
   margin: 0;
-  font-size: 2.25rem;
+  font-size: 2.125rem;
 }
 
 .project-preview-desc {
-  font-size: 1.125rem;
+  font-size: 1rem;
 }
 
 .project-grid {
