Finished Breadcrumbs, Added Project Links
3 main things:

1) Made breadcrumbs look better instead of using the actual route name

2) Added links next to the project header to get to GitHub repo and live site

3) Made bottom nav buttons look better by making them smaller

Also improved general layout / sizing, as well as CSS class locations.

--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,5 @@
 .project-content {
-  width: 55%;
+  width: 60%;
   margin: 0 auto;
 }
 
@@ -48,6 +48,20 @@
 
 .project-preview-container:hover {
   background-color: var(--hover-project-preview);
+}
+
+.header-row {
+  display: flex;
+  align-items: center;
+}
+
+.page-header {
+  margin: 0;
+  flex-grow: 1;
+}
+
+.project-contact-btn {
+  margin-left: 1rem;
 }
 
 /* Stack vertically on small screens */
