--- a/css/index.css
+++ b/css/index.css
@@ -49,15 +49,17 @@ html, body {
   bottom: 2.25rem;
   height: 2.25rem;
   width: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-size: 1.5rem;
+  padding: 1rem;
+  font-size: 1rem;
   font-weight: bold;
   background-color: var(--default-button);
   color: var(--standard-text);
-  border: none;
+  border: 2px solid var(--hover-default-button);
   border-radius: 0.375rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .left-guide-button:hover, .right-guide-button:hover {
@@ -75,6 +77,97 @@ html, body {
 
 .right-arrow-spacer {
   margin-left: 0.5rem;
+}
+
+.contact-button {
+  transition: color 0.2s ease, background-color 0.2s ease;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  position: relative;
+  background-color: var(--default-button);
+  color: var(--standard-text);
+  height: 2.5rem;
+  padding: 0.825rem 1.1rem;
+  font-size: 1.375rem;
+  gap: 0.75rem;
+  font-weight: 600;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  border: none;
+  border-radius: 0.4rem;
+  overflow: hidden;
+  z-index: 0;
+  cursor: pointer;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.contact-button::before,
+.contact-button::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border: 2px solid var(--contact-border);
+  border-radius: 0.375rem;
+  pointer-events: none;
+  transition: width 0.3s ease, height 0.3s ease;
+  z-index: 1;
+}
+
+.contact-button::before {
+  top: 0;
+  left: 0;
+  border-right: none;
+  border-bottom: none;
+}
+
+.contact-button::after {
+  bottom: 0;
+  right: 0;
+  border-left: none;
+  border-top: none;
+}
+
+.contact-button:hover::before {
+  width: 100%;
+  height: 100%;
+}
+
+.contact-button:hover::after {
+  width: 100%;
+  height: 100%;
+}
+
+.contact-image {
+  height: 1.5rem;
+}
+
+.github-image-wrapper {
+  position: relative;
+  height: 1.563rem;
+  width: 1.563rem;
+}
+
+.github-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  transition: opacity 0.2s ease;
+}
+
+.github-image.dark {
+  opacity: 0;
+}
+
+[data-theme="dark"] .github-image.light {
+  opacity: 0;
+}
+
+[data-theme="dark"] .github-image.dark {
+  opacity: 1;
 }
 
 @media screen and (min-width: 2560px) {
