--- a/css/colors.css
+++ b/css/colors.css
@@ -7,11 +7,15 @@
     --nav-background: #ffffff;
     --default-button: #ffffff;
     --active-nav: #dee8f3;
+    --nav-border: transparent;
     --contact-border: #9c9c9c;
     --breadcrumb-link: #3e6d8f;
 
     --toggle-thumb: #ffffff;
     --toggle-track: #ccc;
+
+    --tech-stack-section: #ffffff;
+    --tech-stack-border: transparent;
 
     --hover-nav-text: #eef2f6;
     --hover-default-button: #f5f5f5; 
@@ -27,10 +31,14 @@
     --nav-background: #222222;
     --default-button: #444444;
     --active-nav: #111111;
+    --nav-border: #555555;
     --breadcrumb-link: #84a1c2;
     
     --toggle-thumb: #000000;
     --toggle-track:  #4d4d4d;
+
+    --tech-stack-section: #13161b;
+    --tech-stack-border: #2c323d;
 
     --hover-nav-text: #1A1A1A;
     --hover-default-button: #555555; 
