--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  transition: color 0.2s ease, background-color 0.2s ease;
+  transition: color 0.2s ease, background-color 0.2s ease, border-color 0.2s ease;
   background-color: var(--nav-background);
   color: var(--standard-text);
   height: 4rem;
@@ -8,6 +8,9 @@
   align-items: center;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
+  border-left: 0.075rem solid var(--nav-border);
+  border-right: 0.075rem solid var(--nav-border);
+  border-bottom: 0.075rem solid var(--nav-border);
 }
 
 .nav-links {
