Added Experience and Navigation
All experiences are now added, and include breadcrumbs, and footer nav buttons. Still need to add to the previews, and add content to the pages.

--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 @import 'home.css';
 @import 'navbar.css';
 @import 'projects.css';
+@import 'experience.css';
 @import 'blogs.css';
 @import 'breadcrumb.css';
 @import 'techstack.css';
