--- a/css/experience.css
+++ b/css/experience.css
@@ -1,3 +1,13 @@
+.header-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.exp-header {
+    flex-grow: 1;
+}
+
 .exp-preview-container {
     padding: 1rem;
     margin-top: 1.5rem;
