--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,7 @@ html, body {
 .left-guide-button, .right-guide-button {
   position: absolute; 
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  transition: color 0.2s ease, background-color 0.2s ease;
+  transition: color 0.2s ease, background-color 0.2s ease, border-color 0.2s ease;
   bottom: 2.25rem;
   height: 2.25rem;
   width: auto;
