--- a/css/index.css
+++ b/css/index.css
@@ -135,7 +135,7 @@ html, body {
   padding: 0.825rem 1.1rem;
   font-size: 1.375rem;
   gap: 0.75rem;
-  font-weight: 600;
+  font-weight: bold;
   display: inline-flex;
   align-items: center;
   justify-content: center;
