--- a/css/projects.css
+++ b/css/projects.css
@@ -1,10 +1,11 @@
 .project-content {
   width: 60%;
   margin: 0 auto;
+  flex-grow: 1;
 }
 
 .project-image {
-  height: 4.5rem;
+  height: 5rem;
   margin-bottom: .75rem;
 }
 
