--- a/css/experience.css
+++ b/css/experience.css
@@ -51,3 +51,13 @@
   font-style: italic;
   margin: 0;
 }
+
+.stewarts-img {
+  border-radius: 0.75rem;
+}
+
+.price-chopper-img {
+  border: 8px solid white;
+  border-radius: 0.75rem;
+  height: 4.25rem !important;
+}
