--- a/css/colors.css
+++ b/css/colors.css
@@ -3,6 +3,7 @@
     --standard-text: #1A1A1A;
     --always-white: #ffffff;
     --site-background: #eceff1;
+    --content-background: #ffffff;
     --project-preview: #ffffff;
     --nav-background: #ffffff;
     --default-button: #ffffff;
@@ -14,8 +15,8 @@
     --toggle-thumb: #ffffff;
     --toggle-track: #ccc;
 
-    --tech-stack-section: #ffffff;
-    --tech-stack-border: transparent;
+    --tech-stack-section: #eeeeee;
+    --tech-stack-border: #000000;
 
     --hover-nav-text: #eef2f6;
     --hover-default-button: #f5f5f5; 
@@ -27,18 +28,20 @@
     /* General */
     --standard-text: #ffffff;
     --site-background: #111111; /* #141415 is nice too */
+    --content-background: #1A1A1A;
     --project-preview: #222222;
     --nav-background: #222222;
     --default-button: #444444;
     --active-nav: #111111;
     --nav-border: #555555;
+    --project-img-border: #9c9c9c;
     --breadcrumb-link: #84a1c2;
     
     --toggle-thumb: #000000;
     --toggle-track:  #4d4d4d;
 
-    --tech-stack-section: #13161b;
-    --tech-stack-border: #2c323d;
+    --tech-stack-section: #222933;
+    --tech-stack-border: #0059ff;
 
     --hover-nav-text: #1A1A1A;
     --hover-default-button: #555555; 
