--- a/css/home.css
+++ b/css/home.css
@@ -19,8 +19,9 @@
 
 .name-desc {
     font-size: 1.3rem;
-    width: 85%;
+    width: 80%;
     text-align: center;
+    font-weight: 600;
 }
 
 .contact-button-container {
