--- a/css/projects.css
+++ b/css/projects.css
@@ -72,3 +72,26 @@
   }
 }
 
+.project-img-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-img {
+  border-radius: 1rem;
+  border: 2px solid var(--project-img-border);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  margin: 1rem 0;
+  max-width: 70%;
+  height: auto;
+}
+
+.project-img-desc {
+  font-style: italic;
+}
+
+.project-p {
+  margin: 1.2rem 0;
+}
