Added hr to text-body styles

--- a/css/colors.css
+++ b/css/colors.css
@@ -11,6 +11,7 @@
     --nav-border: transparent;
     --contact-border: #9c9c9c;
     --breadcrumb-link: #3e6d8f;
+    --content-line: #666666;
 
     --toggle-thumb: #ffffff;
     --toggle-track: #ccc;
@@ -36,6 +37,7 @@
     --nav-border: #555555;
     --project-img-border: #9c9c9c;
     --breadcrumb-link: #84a1c2;
+    --content-line: #444444;
     
     --toggle-thumb: #000000;
     --toggle-track:  #4d4d4d;
