Started Work on the Mobile Layout
It looks like it will be easier than I expected. I am going to define CSS variables to scale everything down smoothly without needing to redefine classes (as I am currently doing).

--- a/css/home.css
+++ b/css/home.css
@@ -29,6 +29,8 @@
     display: flex;
     gap: 3.75rem;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .gmail-image {
