--- a/css/navbar.css
+++ b/css/navbar.css
@@ -24,6 +24,12 @@
   gap: 2rem; /* Equal spacing between items */
 }
 
+@media (max-width: 700px) {
+  .nav-links {
+    width: 90%;
+  }
+}
+
 .nav-links li {
   text-align: center;
   cursor: pointer;
