--- a/css/projects.css
+++ b/css/projects.css
@@ -4,15 +4,6 @@
   border-radius: 0.5rem;
 }
 
-.projects-desc {
-  transition: color 0.2s ease, background-color 0.2s ease;
-  font-size: 1rem;
-  font-weight: bold;
-  font-style: italic;
-  margin: 0;
-  margin-bottom: 2rem;
-}
-
 .project-preview-header {
   transition: color 0.2s ease, background-color 0.2s ease;
   padding: 0;
@@ -55,9 +46,12 @@
   margin-left: 1rem;
 }
 
-/* Stack vertically on small screens */
 @media (max-width: 640px) {
   .project-grid {
     grid-template-columns: 1fr;
+  }
+
+  .projects-desc {
+    text-align: center;
   }
 }
