--- a/css/home.css
+++ b/css/home.css
@@ -13,21 +13,21 @@
 }
 
 .name-header {
-    font-size: 6rem;
+    font-size: var(--name-header-size);
     margin: 0;
 }
 
 .name-desc {
     font-size: 1.3rem;
-    width: 50%;
+    width: var(--home-desc-width);
     text-align: center;
     font-weight: 600;
 }
 
 .contact-button-container {
-    margin-top: 3rem;
+    margin-top: var(--home-contact-margin-top);
     display: flex;
-    gap: 3.75rem;
+    gap: var(--home-contact-button-gap);
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
@@ -44,24 +44,4 @@
 
 .yt-image {
     height: 1.25rem;
-}
-
-@media (max-width: 640px) {
-    .contact-button-container {
-        gap: 2rem;
-        flex-direction: column;
-    }
-
-    .name-header {
-        font-size: 4rem;
-    }
-
-    .main-page-header {
-        text-align: center;
-    }
-
-    .name-desc {
-        width: 75%;
-        font-size: 1rem;
-    }
 }
