--- a/css/projects.css
+++ b/css/projects.css
@@ -17,7 +17,7 @@
 
 .project-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: var(--main-page-grid-columns);
   gap: 2rem;
 }
 
@@ -37,21 +37,6 @@
   background-color: var(--hover-project-preview);
 }
 
-.header-row {
-  display: flex;
-  align-items: center;
-}
-
 .project-contact-btn {
   margin-left: 1rem;
-}
-
-@media (max-width: 640px) {
-  .project-grid {
-    grid-template-columns: 1fr;
-  }
-
-  .projects-desc {
-    text-align: center;
-  }
 }
